--- a/BrGr_Omnivory_2013.tex
+++ b/BrGr_Omnivory_2013.tex
@@ -45,11 +45,11 @@ California - San Diego, 9500 Gilman Drive, La Jolla, CA 92093 USA
 (\emph{ssandin@ucsd.edu}) \\
 \noindent \(^{8}\) Centre for Biodiversity Theory and Modelling, Station d'Ecologie Exp\'{e}rimentale du CNRS, 09200 Moulis, France 
 (\emph{claire.demazancourt@ecoex-moulis.cnrs.fr})\\
-\noindent * Corresponding author
+\noindent * Corresponding author. Phone: 603.667.5099.
 \\
+\noindent Prepared as a {\bf letter} for \emph{Ecology Letters}, 150 words in abstract, 3,868 words in main text, 49 references, 2 tables, 4 figures\\
 
-\noindent Prepared as an {\bf article} for \emph{American
- Naturalist}\\
+\noindent Running title: Multi-channel feeding in food webs\\ 
 
 \noindent {\bf Keywords:} food webs, stability, detritus, green world, attack
 rates, multi-channel\\
@@ -59,28 +59,21 @@ rates, multi-channel\\
 \noindent \emph{Appendix B:} Effect of varying parameters used to
 estimate trophic level and diet. 
 \noindent \emph{Appendix C:} Expanded version of Table 1, including references. \\
-
- 
+\\
+\noindent \emph{Statement of authorship}: All authors contributed to development of the ideas presented, initial model development and editing of the manuscript. In addition: EMW wrote the paper, prepared all final analyses and the figures. EMW and CdM developed the presented models and their analyses. EMW, CdM, JCM and KLC developed parameter sets for models. SA and EMW analyzed empirical food web data. 
 
 \pagebreak
 \linenumbers
 \modulolinenumbers[2]
 
-\noindent {\bf Abstract: 200 words exactly}\\
-\noindent Recent advances in food web ecology highlight that most real food webs represent an interplay between producer and detritus-based webs and are governed by consumers which are rampant omnivores. A possible avenue to unify these advances comes from models demonstrating that predators feeding on distinctly
-different channels may stabilize food webs. Empirical studies suggest many consumers engage in such behavior by feeding on prey items from both living-autotroph (green) and
-detritus-based (brown) webs---what we term `multi-channel feeding'---but we know little about how common such feeding is across systems and trophic levels and its effect on system stability. Considering 23 empirical webs, we find that multi-channel feeding
-is equally common across terrestrial, freshwater and marine systems and occurs most often
-among primary consumers.  We next
-developed a simple four-compartment nutrient cycling model for consumers
-eating autotrophs and detritus, which showed that---across terrestrial and aquatic ecosystems---multi-channel feeding is
-stabilizing at low attack rates on autotrophs, but destabilizing at high attack rates on autotrophs, compared to herbivory- or detritivory-only models. Together our results demonstrate that multi-channel feeding is common across ecosystems and may be a
-stabilizing force in real webs that have consumers with asymmetric attack rates.
+\noindent {\bf Abstract:}\\
+\noindent Real food webs possess producer-based (green) and detritus-based (brown) energy channels that are rife with omnivores. Recent studies posit that a certain class of omnivorous consumer---those that feed across green and brown channels, what we term `multi-channel feeding'---may be integral to system stability. However, we know little about how common such feeding is across ecosystems and trophic levels and its effect on stability. Comparing 23 empirical webs, we found that multi-channel feeding is common across terrestrial, freshwater and marine systems and occurs most often among primary consumers. Our simple nutrient cycling models of terrestrial and aquatic ecosystems revealed that multi-channel feeding is stabilizing at low attack rates on autotrophs, but destabilizing at high attack rates on autotrophs. Together our results demonstrate that multi-channel feeding is common across ecosystems and may be a stabilizing force in real webs that have consumers with low or asymmetric attack rates.
 % Bring back if have more that 200 words someday -- I have pasted the 200 word abstract at the end of the tex file
 % [INSERT after -only models.] However, the set of conditions for stable webs with multi-channel consumers is narrower for aquatic systems.
 % [INSERT after rampant omnivores. ] ---feeding on varied prey across trophic levels and resource channels
 % Ecology Letters: 150 words for Letter in abstract. Letters: maximum of 5000 words in length (main text), 6 figures, tables or boxes, and 50 references.
 % Ecology: A report is 20 ms pages (TOTAL) and 200 word abstract; so we'll do an article, which is a 350 word abstract and 20-30 ms pages.
+% Delete statement of authorship.
 
 \pagebreak
 \noindent {\bf Introduction}\\
@@ -156,7 +149,7 @@ and diet specificity for each consumer taxon in each web. We computed the trophi
 level according to the flow
 information \citep{Levine:1980} when present. For binary food webs,
 we began by assuming that each of the \(X\) consumers of a given resource receives the same fraction
-\(\varepsilon/X\) of the flow originating from the resource (where \(\varepsilon\) is the efficiency of transformation) and that all plants received an equal input from detritus. We constructed from an adjacency matrix (\(A\)) \(A'\) such that each row sums to the efficiency of transformation (\(\varepsilon\)). We added one column of \(1-\varepsilon\) for all species except top predators which were given a value of 1. The eigenvector of the resulting matrix is the ``PageRank'' \citep{Allesina:2009}, representing the total amount flowing through the node. With this information we then computed the trophic level as for the
+\(\varepsilon/X\) of the flow originating from the resource (where \(\varepsilon\) is the efficiency of transformation) and that all plants received an equal input from detritus. We constructed from an adjacency matrix (\(A\)) \(A'\) such that each row sums to the efficiency of transformation (\(\varepsilon\)). We added one column of \(1-\varepsilon\) for all species except top predators which were given a value of 1. The eigenvector associated with the dominant eigenvalue of the resulting matrix measures the ``PageRank'' \citep{Allesina:2009}: each coefficient can be interpreted as the total amount flowing through the corresponding node. With this information we then computed the trophic level as for the
 flow-based food webs. For the figures reported here, we chose
 \(\varepsilon=0.15\), but our analysis is not sensitive to the
 particular value chosen for the efficiency of transformation (Appendix
@@ -484,7 +477,7 @@ Fellow and an NSF Postdoctoral Research Fellow in Biology (Grant DBI-0905806), a
 
 \newpage
 \bibliography{/Users/Lizzie/Documents/EndnoteRelated/Bibtex/LizzieMainMinimal}
-\bibliographystyle{/Users/Lizzie/Documents/EndnoteRelated/Bibtex/styles/amnat}
+\bibliographystyle{/Users/Lizzie/Documents/EndnoteRelated/Bibtex/styles/ecolett}
 \newpage
 % \newgeometry{a4paper, landscape}
 %\renewcommand{\familydefault}{\sfdefault}
