--- a/BrGr_Omnivory_2013.tex
+++ b/BrGr_Omnivory_2013.tex
@@ -47,10 +47,10 @@ California - San Diego, 9500 Gilman Drive, La Jolla, CA 92093 USA
 (\emph{claire.demazancourt@ecoex-moulis.cnrs.fr})\\
 \noindent * Corresponding author. Phone: 603.667.5099.
 \\
+
 \noindent Prepared as a {\bf letter} for \emph{Ecology Letters}, 150 words in abstract, 3,868 words in main text, 49 references, 2 tables, 4 figures\\
 
-\noindent Running title: Multi-channel feeding in food webs\\ 
-
+\noindent {\bf Running title:} Multi-channel feeding in food webs\\ 
 \noindent {\bf Keywords:} food webs, stability, detritus, green world, attack
 rates, multi-channel\\
 
@@ -60,7 +60,7 @@ rates, multi-channel\\
 estimate trophic level and diet. 
 \noindent \emph{Appendix C:} Expanded version of Table 1, including references. \\
 \\
-\noindent \emph{Statement of authorship}: All authors contributed to development of the ideas presented, initial model development and editing of the manuscript. In addition: EMW wrote the paper, prepared all final analyses and the figures. EMW and CdM developed the presented models and their analyses. EMW, CdM, JCM and KLC developed parameter sets for models. SA and EMW analyzed empirical food web data. 
+\noindent \emph{Statement of authorship:} All authors contributed to development of the ideas presented, initial model development and editing of the manuscript. In addition: EMW wrote the paper, prepared all final analyses and the figures. EMW and CdM developed the presented models and their analyses. EMW, CdM, JCM and KLC developed parameter sets for models. SA and EMW analyzed empirical food web data. 
 
 \pagebreak
 \linenumbers
@@ -465,14 +465,14 @@ and the rates of attack on autotrophs may affect trophic structure. Such differe
 \\
 \newpage
 \noindent {\bf Acknowledgments}\\
-\noindent We also thank J. Dunne and M. Scotti for sharing
-food web data and M. O'Connor and S. Diehl for reviewing an earlier version of this
+\noindent We thank J. Dunne and M. Scotti for sharing
+food web data and M. O'Connor and S. Diehl for reviewing earlier versions of the
 manuscript. This work was conducted in part with the Trophic
 Structure Comparisons Working Group supported by the National Center
 for Ecological Analysis and Synthesis, a Center funded by NSF (Grant
 DEB-0072909), the University of California at Santa Barbara, and the
 state of California, in part conducted through the The Centre for Biodiversity Theory and Modelling which is supported by the TULIP Laboratory of Excellence (ANR-10-LABX-41), and in part conducted while EMW was an EPA STAR
-Fellow and an NSF Postdoctoral Research Fellow in Biology (Grant DBI-0905806), and also while she was supported by the NSERC CREATE training program in biodiversity research. Support for CDM came from 
+Fellow and an NSF Postdoctoral Research Fellow in Biology (Grant DBI-0905806), and also while she was supported by the NSERC CREATE training program in biodiversity research.  
 % ADD IN: Comments from two anonymous reviewers greatly improved the manuscript, for which we are thankful. 
 
 \newpage
